--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <script type="module" crossorigin src="/cosse-qr/assets/index.4501bc34.js"></script>
     <link rel="stylesheet" href="/cosse-qr/assets/index.aa2fe925.css">
-  </head>
+  <link rel="manifest" href="/cosse-qr/manifest.webmanifest"></head>
   <body>
     <div id="root"></div>
     
